# Backup

./: .zshrc
Stage-3.2.2-Source/: CMakeLists.txt  config.h
Stage-3.2.2-Source/Player-Stage-Manual-master/: LICENSE  README.md  manual.bib  playerstage_instructions_STAGE320.tex  playerstage_instructions_STAGE411.tex
Stage-3.2.2-Source/Player-Stage-Manual-master/code/Ch3/: bigbob.inc  bigbob1.world  bigbob2.world  bigbob3.world  bigbob4.cfg  bigbob4.world  bigbob4_camera.cfg  bigbob4_camera.world  bigbob4_fiducial.cfg  bigbob4_fiducial.world  bigbob4_gripper.cfg  bigbob4_gripper.world  bigbob5.cfg  bigbob5.world  bigbob6.cfg  bigbob6.world  bigbob7.cfg  bigbob7.world  empty.cfg  empty.world
Stage-3.2.2-Source/Player-Stage-Manual-master/code/Ch4/: bigbob.inc  bigbob8.cfg  bigbob8.world  map.inc
Stage-3.2.2-Source/Player-Stage-Manual-master/code/Ch5.1/: README  example0.cc  simple.world
Stage-3.2.2-Source/Player-Stage-Manual-master/code/Ch5.2/: Makefile  README  bigbob10.cc  bigbob11.cc  bigbob11.cfg  bigbob11.world  bigbob12.cc  bigbob13.cc  bigbob7.cfg  bigbob7.world  bigbob8.cc  bigbob9.cc
Stage-3.2.2-Source/Player-Stage-Manual-master/code/Ch5.3/: Makefile  (+5 more)
Stage-3.2.2-Source/Player-Stage-Manual-master/manual for playerstage 2.1/: tutorial-2.1-src.tar
Stage-3.2.2-Source/libstage/: stage.hh  typetable.cc~
Stage-3.2.2-Source/worlds/: empty.cfg  fasr.world  simple.world~  spade.world  spade.world~
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/code/cargo-ants-ros-pkgs/at_control/: package.xml
catkin_ws/src/code/cargo-ants-ros-pkgs/cargo_ants_slam/: package.xml
catkin_ws/src/code/cargo-ants-ros-pkgs/cargo_ants_slam/config/: at_wolf_polylines_test.rviz
catkin_ws/src/code/cargo-ants-ros-pkgs/cargo_ants_slam/include/: wolf_node.h  wolf_node_occmap.h
catkin_ws/src/code/cargo-ants-ros-pkgs/cargo_ants_slam/launch/: wolf_occmap_from_sim_bag.launch  wolf_polylines_from_volvo.launch
catkin_ws/src/code/cargo-ants-ros-pkgs/cargo_ants_slam/msg/: KeyFrame.msg  Trajectory.msg
catkin_ws/src/code/cargo-ants-ros-pkgs/cargo_ants_slam/src/: wolf_main_occmap.cpp  wolf_node.cpp  wolf_node_polyline.cpp  wolf_prunning_test.cpp
stage4/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  stage.pc
stage4/assets/: CTestTestfile.cmake  Makefile  cmake_install.cmake
stage4/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
stage4/examples/ctrl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
stage4/libstage/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libstage.so.4.1.1  stage
stage4/libstageplugin/: CTestTestfile.cmake  Makefile  cmake_install.cmake
stage4/worlds/: CTestTestfile.cmake  Makefile  cmake_install.cmake
stage4/worlds/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
stage4/worlds/bitmaps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
stage4/worlds/wifi/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+411 files in other folders)
