<?xml version="1.0"?>
<package>
  <name>at_control</name>
  <version>0.0.0</version>
  <description>The at_control package</description>

  <maintainer email="jendav@hh.se">Jennifer David</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
